# PhysicsSandbox

./: .gitignore  CMakeLists.txt  contributors.txt  main.cpp
Application/: CMakeLists.txt  app.cpp  app.hpp
Application/CPP/: Object.cpp  Object.hpp  QViPhyManager.cpp  QViPhyManager.hpp  QuickView.cpp  QuickView.hpp  app.cpp  app.hpp
Application/QML/: AddObjectToolBar.qml  ForceSelectionToolBar.qml  Input.qml  ObjectOverview.qml  app.qrc  main.qml
Examples/: SimulationConfigurations.cpp  SimulationConfigurations.hpp
Physics/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  PhysicalConstants.hpp  PhysicalConstantsHolder.cpp  PhysicalConstantsHolder.hpp  Simulation.cpp  Simulation.hpp  Vector3.hpp
Physics/Bodies/: Body.hpp  PointParticle.cpp  PointParticle.hpp  PointParticleCreator.cpp  PointParticleCreator.hpp
Physics/EquationSolvers/DifferentialEquations/Ordinary/: Euler.cpp  Euler.h  Leapfrog.cpp  Leapfrog.hpp  ODESolver.cpp  ODESolver.hpp
Physics/Forces/: ColoumbForce.cpp  ColoumbForce.hpp  Force.cpp  Force.hpp  GravitationalForce.cpp  GravitationalForce.hpp
Physics/Tools/: GenerateInitials.cpp  GenerateInitials.hpp
ViPhy/: CMakeLists.txt  Object.cpp  Object.hpp
Visualization/: CMakeLists.txt  Camera.cpp  Camera.hpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
Visualization/Shaders/: FragmentShader.glsl  GeometryShader.glsl  Shader.cpp  Shader.hpp  VertexShader.glsl
Visualization/Shaders/Shadow/Omnidirectional/: OmniDirFragmentShader.glsl  OmniDirGeometryShader.glsl  OmniDirVertexShader.glsl
Visualization/Shapes/: Cube.cpp  Cube.hpp  IcoSphere.cpp  IcoSphere.hpp  LightSource.cpp  LightSource.hpp  Shape.cpp  Shape.hpp  Triangles.cpp  Triangles.hpp
Visualization/Tools/: TransformationMatrices.hpp
unittests/: CMakeLists.txt  Makefile
unittests/lib/: CTestTestfile.cmake  Makefile
unittests/lib/googlemock/: CMakeLists.txt  CTestTestfile.cmake  Makefile
unittests/lib/googlemock/gtest/: CTestTestfile.cmake  Makefile
unittests/lib/googlemock/include/gmock/: gmock-spec-builders.h
unittests/lib/googletest/: CMakeLists.txt  Makefile
unittests/lib/googletest/samples/: sample1_unittest.cc
unittests/lib/googletest/test/: gtest_main_unittest.cc
unittests/tests/: CMakeLists.txt  Force_test.cpp  Makefile  Simulation_test.cpp  Vector3_test.cpp  runPhysicsTests
